them trang profile

--- a/src/style.scss
+++ b/src/style.scss
@@ -16,7 +16,7 @@ body {
         background-color: white!important;
     }
     .ant-layout-sider-trigger {
-        background-color: #447bff !important;
+        background-color: #1f3368 !important;
     }
     .ant-menu-item {
         .ant-menu-title-content {
